Testing something to prevent scrolling while interacting with controls on mobile

--- a/src/app/laboratory/nexus/local.css
+++ b/src/app/laboratory/nexus/local.css
@@ -204,6 +204,7 @@ main:has(#proto-nexus) {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  touch-action: none;
 }
 .pnm-range-wrapper:active {
   cursor: grabbing;
